prevent width shift

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -93,6 +93,7 @@ body {
     float: left;
     position:relative;
     font-size: 24px;
+    width: 50px;
     transition: left 1s ease-in-out;
   }
   .year-wrapper {
